scalalib/src/test/resource/acyclic/src/test/resources/success/dag/B.scala
package success.dag

class B {
  val a: A = null
}
