scalalib/src/test/resource/acyclic/src/test/resources/fail/cyclicgraph/C.scala
package fail.cyclicgraph
import acyclic.file

object C extends A{
  val a: A = null
}
